# learnOpencl

./: .gitignore  CMakeLists.txt
3rd/opencl/lib/: OpenCLExt.lib  OpenCLUtils.lib  OpenCLUtilsCpp.lib  OpenCLUtilsCppd.lib  OpenCLUtilsd.lib
3rd/opencl/share/cmake/OpenCL/: OpenCLConfigVersion.cmake
3rd/opencl/share/cmake/OpenCLExtensionLoader/: OpenCLExtensionLoaderTargets.cmake
3rd/opencl/share/cmake/OpenCLHeadersCpp/: OpenCLHeadersCppTargets.cmake
3rd/opencl/share/cmake/OpenCLICDLoader/: OpenCLICDLoaderTargets.cmake
3rd/opencl/share/cmake/OpenCLUtils/: OpenCLUtilsTargets.cmake
3rd/opencl/share/cmake/OpenCLUtilsCpp/: OpenCLUtilsCppTargets.cmake
learnOpencl/: CMakeLists.txt  add.cl  learnOpencl.cpp  learnOpencl.h  opencltest.cpp
